# std_hardware

./: CMakeLists.txt  README.md
include/: hardware  iohw.h
include/detail/: hardware.hpp
tests/basic_tests/: CMakeLists.txt  basic_tests.cpp
